--- a/flask_app/static/css/custom/style.css
+++ b/flask_app/static/css/custom/style.css
@@ -1,3 +1,6 @@
-.shaded {
-    box-shadow: 50px, 50px, #999;
+body {
+    background-image: url('/static/img/rainbowpaint.jpg');
+    background-size: 100%;
+    height: 100vh;
+    width: 100vw;
 }
