--- a/flask_app/templates/friendships.html
+++ b/flask_app/templates/friendships.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{url_for('static', filename='/css/custom/style.css')}}">
     <title>Friendships</title>
 </head>
-<body>
+<body class="overflow-hidden">
     <div class="container my-5 px-5 py-3">
         <div class="row bg-light shadow rounded">
             <div class="col-9">
@@ -21,31 +21,33 @@
         </div>
 
         <div class="row mt-3">
-            <div class="col bg-light shadow rounded p-3">
-                <div class="row">
+            <div class="col bg-light shadow rounded p-3 ">
+                <div class="row" >
                     <h2>Friendships</h2>
-                    <table class="table table-responsive table-striped">
-                        <thead>
-                            <tr>
-                                <th>User</th>
-                                <th>Friend</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for friendship in friendships %}
-                            <tr>
-                                <td>{{ friendship.first_name }} {{ friendship.last_name }}</td>
-                                <td>{{ friendship.friends[0].first_name }} {{ friendship.friends[0].last_name }}</td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                        <tfooter>
-                            <tr>
-                                <td class="text-muted">Most recent friendship created on...</td>
-                                <td class="text-muted">{{ created.created_at.strftime('%m-%d-%Y at %H:%M') }}</td>
-                            </tr>
-                        </tfooter>
-                    </table>
+                    <div class="table-responsive" style="max-height: 50vh;">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>User</th>
+                                    <th>Friend</th>
+                                </tr>
+                            </thead>
+                            <tbody class="overflow-auto" >
+                                {% for friendship in friendships %}
+                                <tr>
+                                    <td>{{ friendship.first_name }} {{ friendship.last_name }}</td>
+                                    <td>{{ friendship.friends[0].first_name }} {{ friendship.friends[0].last_name }}</td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <td class="text-muted">Most recent friendship created on...</td>
+                                    <td class="text-muted">{{ created.created_at.strftime('%m-%d-%Y at %H:%M') }}</td>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
                 </div>  
             </div>
 
